--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -6,16 +6,13 @@
   --inverse-color: #e1d5d5;
 }
 
-html.is-animating .transition-fade{
-  opacity: 0;
-}
-
 .transition-fade{
   opacity: 1;
   transition: 500ms;
 }
 
 * {
+  font-family: Arial, Helvetica, sans-serif;
   transition: 0.4s ease-in-out;
   box-sizing: border-box;
   padding: 0;
@@ -25,7 +22,7 @@ html.is-animating .transition-fade{
 }
 
 section {
-  height: 80vh;
+  height: 100vh;
 }
 
 body {
@@ -177,7 +174,7 @@ header nav .nav:hover::after {
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  background-image: url(/asset/image/photo2.webp);
+  background-image: url(/asset/image/MyLogo.webp);
   background-size: cover;
   background-position: center;
   background-color: var(--surface-color);
@@ -282,176 +279,151 @@ header nav .nav:hover::after {
 /* project */
 
 /* mobile */
-.slider {
-  height: 100vh;
-  position: relative;
-}
-
-.slider .list .item {
-  position: absolute;
-  inset: 0 0 0 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.slider .list .item img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.slider .list .item::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-image: linear-gradient(to top, #000 40%, transparent);
-}
-
-.slider .list .item .content {
-  position: absolute;
-  left: 10%;
-  top: 20%;
-  width: 500px;
-  max-width: 80%;
-  z-index: 1;
-}
-
-.slider .list .item .content h2,
-.slider .list .item .content p {
-  color: #fff;
-}
-
-.slider .list .item .content p:nth-child(1) {
-  text-transform: uppercase;
-  letter-spacing: 10px;
-}
-
-.slider .list .item .content h2 {
-  font-size: 100px;
-  margin: 0;
-}
-
-.slider .list .item.active {
-  opacity: 1;
-  z-index: 10;
-}
-
-@keyframes showContent {
-  to {
-    transform: translateY(0);
-    filter: blur(0);
-    opacity: 1;
-  }
-}
-
-.slider .list .item.active p:nth-child(1),
-.slider .list .item.active h2,
-.slider .list .item.active p:nth-child(3),
-.slide .list .item.active .content  a {
-  transform: translateY(30px);
-  filter: blur(20px);
-  opacity: 0;
-  animation: showContent 0.5s 0.7s ease-in-out forwards;
-}
-
-.sldier .list .item.active h2 {
-  animation-delay: 2s;
-}
-
-.sldier .list .item.item.active p:nth-child(3) {
-  animation-duration: 1.3s;
-}
-
-.arrows {
-  position: absolute;
-  top: 30%;
-  right: 50px;
-  z-index: 20;
-}
-
-.arrows button {
-  background-color: #eee5;
-  border: none;
-  width: 40px;
-  height: 50px;
-  border-radius: 0.75rem;
-  transition: 0.5s;
-}
-
-.arrows button i {
-  font-family: monospace;
-  font-size: 20px;
-  color: white;
-}
-
-.arrows button:hover {
-  background-color: #eee;
-}
-
-.arrows button:hover i {
-  color: black;
-}
-
-.thumbnail{
-  position: absolute;
-  bottom: 50px;
-  z-index: 11;
+#mobile > .wrapper{
   display: flex;
-  gap: 10px;
-  width: 100%;
-  height: 250px;
-  padding: 0 50px;
-  box-sizing: border-box;
-  overflow: auto;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-wrap: wrap;
 }
 
-.thumbnail::-webkit-scrollbar{
-  width: 0;
+#mobile > .wrapper {
+  gap: 4rem;
 }
 
-.thumbnail .item{
-  width: 150px;
-  height: 220px;
-  filter: brightness(0.5);
-  transition: .5s;
-  flex-shrink: 0;
-  border-radius: 0.75rem;
+#mobile > .wrapper > .container{
+  width: 600px;
+  height: 400px;
+  background-color: #0077b5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  box-shadow:10px 10px 10px #24292e49;
+}
+
+#mobile > .wrapper > .container {
   overflow: hidden;
-  box-shadow: 2px 2px 5px 5px var(--prymary-color);
+  background-position: center;
+  background-size: cover;
 }
 
-.thumbnail .item img{
+#mobile > .wrapper > .container:nth-child(1) {
+  background-image: url(/asset/image/1.webp);
+}
+
+#mobile > .wrapper > .container:nth-child(2) {
+  background-image: url(/asset/image/2.webp);
+}
+
+#mobile > .wrapper > .container:nth-child(3) {
+  background-image: url(/asset/image/3.webp);
+}
+
+#mobile > .wrapper > .container:nth-child(4) {
+  background-image: url(/asset/image/4.webp);
+}
+
+#mobile > .wrapper > .container > .contain {
+  position: relative;
+  bottom: -400px;
+  background: #a7a7a7;
+  backdrop-filter: blur(10px);
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#mobile > .wrapper > .container > .contain > p{
+  text-align: center;
+  font-size: 1rem;
+  width: 50%;
+  font-weight: 100;
+  color: #2c2525;
+}
+
+#mobile > .wrapper > .container:hover .contain {
+  position: relative;
+  bottom: 100px;
+}
+
+/* website */
+#website > .wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-wrap: wrap;
+}
+
+#website > .wrapper {
+  gap: 4rem;
+}
+
+#website > .wrapper > .container{
+  width: 600px;
+  height: 400px;
+  background-color: #0077b5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  box-shadow:10px 10px 10px #24292e49;
+}
+
+#website > .wrapper > .container {
+  overflow: hidden;
+  background-position: center;
+  background-size: cover;
+}
+
+#website > .wrapper > .container:nth-child(1) {
+  background-image: url(/asset/image/5.webp);
+}
+
+#website > .wrapper > .container:nth-child(2) {
+  background-image: url(/asset/image/6.webp);
+}
+
+#website > .wrapper > .container:nth-child(3) {
+  background-image: url(/asset/image/7.webp);
+}
+
+#website > .wrapper > .container:nth-child(4) {
+  background-image: url(/asset/image/4.webp);
+}
+
+#website > .wrapper > .container > .contain {
+  position: relative;
+  bottom: -400px;
+  background: #a7a7a750;
+  backdrop-filter: blur(10px);
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.thumbnail .item.item.active{
-  filter: brightness(1.2);
+#website > .wrapper > .container > .contain > p{
+  text-align: center;
 }
 
-.thumbnail .item .content{
-  position: absolute;
-  inset: auto 10px 10 10px;
+#website > .wrapper > .container:hover .contain {
+  position: relative;
+  bottom: 0;
 }
 
-@media screen and (max-width: 678px) {
-  .thumbnail{
-    justify-content: start;
-  }
 
-  .slide .list .item .content h2{
-    font-size: 60px;
-  }
 
-  .arrows {
-    top: 10%;
-  }
-}
+
+
+
 
 
