--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -420,6 +420,65 @@ header nav .nav:hover::after {
   bottom: 0;
 }
 
+/* contanct */
+
+#contact{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback-container {
+  background: #ffffffad;
+  backdrop-filter: blur(50px);
+  width: 300px; 
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 4px 4px 8px rgba(0,0,0,0.1);
+}
+
+.feedback-container h2 {
+  text-align: center;
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  font-size: 14px;
+  margin-bottom: 5px;
+  font-weight: 500;
+}
+
+.form-group input[type="email"],
+.form-group textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  border-radius: 4px;
+  resize: none;
+}
+
+button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background: #333;
+  color: #fff;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background: #555;
+}
+
 
 
 
